@@ -1,6 +1,4 @@
 next release:
-  * update configure summary w/current variations
-  * replace unnecessarily fatal assertions with debug spew (bug #1986478)
   * zebragtk library -version-info (or avoid versioning...)
   * QZebra alternate VIDEO_INIT entry points
   * base library python bindings
@@ -15,6 +13,7 @@ general:
   * dbg_scan background image stretched (still...)
   * profile and weed out obvious oversights
   * windows port
+  * example using SANE to scan symbol(s)
 
 symbologies:
   * PDF417
