@@ -57,9 +57,22 @@
  */
 #ifndef NDEBUG
 
+# include <stdio.h>
+
+#if __STDC_VERSION__ < 199901L && !defined(__func__)
+# if __GNUC__ >= 2
+#  define __func__ __FUNCTION__
+# else
+#  define __func__ "<unknown>"
+# endif
+#endif
+
 # define zassert(condition, retval, format, ...) do {                   \
         if(!(condition)) {                                              \
-            /*            fprintf(stderr, "WARNING: __file__:__line__: __func__: Assertion \"%s\" failed.\n\t" format , ##__VA_ARGS__);*/ \
+            fprintf(stderr, "WARNING: %s:%d: %s:"                       \
+                    " Assertion \"%s\" failed.\n\t" format,             \
+                    __FILE__, __LINE__, __func__, #condition ,          \
+                    ##__VA_ARGS__);                                     \
             return(retval);                                             \
         }                                                               \
     } while(0)
